force-app/main/default/objects/CampaignMember/fields/Already_a_Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>Already_a_Campaign_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already a Campaign Member</label>
    <type>Checkbox</type>
</CustomField>