force-app/main/default/objects/CampaignMember/fields/Attendee_Notes__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Attendee Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>