force-app/main/default/objects/CampaignMember/fields/Campaign_Member_Host__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Host__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact.Host_Brisbane__c  ) ),  Contact.Host_Brisbane__r.Host_Name__c  ,
IF(NOT(ISBLANK( Contact.Host_GC__c ) ),   Contact.Host_GC__r.Host_Name__c   ,
  Contact.Host_Sydney__r.Host_Name__c  )
)</formula>
    <label>Campaign Member Host</label>
    <type>Text</type>
</CustomField>