force-app/main/default/objects/CampaignMember/fields/Campaign_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Record_Type__c</fullName>
    <formula>Campaign.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Record Type</label>
    <type>Text</type>
</CustomField>