force-app/main/default/objects/CampaignMember/fields/ContactDate__c.field-meta.xml
<CustomField>
    <fullName>ContactDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactDate</label>
    <type>DateTime</type>
</CustomField>