force-app/main/default/objects/CampaignMember/fields/ContactLookup__c.field-meta.xml
<CustomField>
    <fullName>ContactLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ContactLookup</description>
    <label>ContactLookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Members (ContactLookup)</relationshipLabel>
    <relationshipName>Campaign_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>