force-app/main/default/objects/CampaignMember/fields/Event_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Event_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Allocation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.CampaignId</field>
            <operation>equals</operation>
            <valueField>Event_Allocation__c.Event__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Allocation__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>