force-app/main/default/objects/CampaignMember/fields/Event_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Member_Status__c</fullName>
    <label>Event Member Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Event_Member_Status</valueSetName>
    </valueSet>
</CustomField>