force-app/main/default/objects/CampaignMember/fields/Last_Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Time__c</fullName>
    <formula>LastModifiedDate</formula>
    <label>Last Modified Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>