force-app/main/default/objects/CampaignMember/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>TEXT(Campaign.Event_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>