force-app/main/default/objects/CampaignMember/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <formula>Event_Allocation__r.Allocation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Segment</label>
    <type>Text</type>
</CustomField>