force-app/main/default/objects/CampaignMember/fields/No_of_guests__c.field-meta.xml
<CustomField>
    <fullName>No_of_guests__c</fullName>
    <label>No. of guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>