force-app/main/default/objects/CampaignMember/fields/Offer_Name__c.field-meta.xml
<CustomField>
    <fullName>Offer_Name__c</fullName>
    <formula>Campaign.Offer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Name</label>
    <type>Text</type>
</CustomField>