force-app/main/default/objects/CampaignMember/fields/Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status__c</fullName>
    <formula>TEXT(Campaign.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Status</label>
    <type>Text</type>
</CustomField>