force-app/main/default/objects/CampaignMember/fields/Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Offer_Type__c</fullName>
    <formula>Campaign.Offer_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Type</label>
    <type>Text</type>
</CustomField>