force-app/main/default/objects/CampaignMember/fields/Offer_Value__c.field-meta.xml
<CustomField>
    <fullName>Offer_Value__c</fullName>
    <formula>Campaign.Offer_Value__c</formula>
    <label>Offer Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>