force-app/main/default/objects/CampaignMember/fields/OfferStatus__c.field-meta.xml
<CustomField>
    <fullName>OfferStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OfferStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>