force-app/main/default/objects/CampaignMember/fields/Preferences__c.field-meta.xml
<CustomField>
    <fullName>Preferences__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Preferences Lookup</description>
    <label>Preferences</label>
    <referenceTo>Preferences__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>