force-app/main/default/objects/CampaignMember/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <formula>Campaign.Property__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property</label>
    <type>Text</type>
</CustomField>