force-app/main/default/objects/CampaignMember/fields/RSVP_Status__c.field-meta.xml
<CustomField>
    <fullName>RSVP_Status__c</fullName>
    <label>RSVP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attending</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Tentative</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>