force-app/main/default/objects/CampaignMember/fields/Seat_Available__c.field-meta.xml
<CustomField>
    <fullName>Seat_Available__c</fullName>
    <formula>Campaign.Seats_Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seat Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>