force-app/main/default/objects/CampaignMember/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <formula>Campaign.Event_Start_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>