force-app/main/default/objects/CampaignMember/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <formula>Campaign.Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>