force-app/main/default/objects/CampaignMember/fields/Static_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Static_End_Date_Time__c</fullName>
    <formula>Campaign.Static_End_Date_Time__c</formula>
    <label>End Date/Time</label>
    <type>Text</type>
</CustomField>