force-app/main/default/objects/CampaignMember/fields/Static_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Static_Start_Date_Time__c</fullName>
    <formula>Campaign.Static_Start_Date_Time__c</formula>
    <label>Start Date/Time</label>
    <type>Text</type>
</CustomField>