force-app/main/default/objects/CampaignMember/fields/Test_Formula__c.field-meta.xml
<CustomField>
    <fullName>Test_Formula__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ Id, &apos;Detail Page&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Formula</label>
    <type>Text</type>
</CustomField>