force-app/main/default/objects/CampaignMember/fields/Ticket_Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Collection_Status__c</fullName>
    <label>Ticket Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Collected</fullName>
                <default>true</default>
                <label>Not Collected</label>
            </value>
            <value>
                <fullName>Collected</fullName>
            </value>
            <value>
                <fullName>Lost Ticket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>