force-app/main/default/objects/CampaignMember/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <formula>Contact.Tier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier</label>
    <type>Text</type>
</CustomField>