force-app/main/default/objects/CampaignMember/fields/Total_Seat_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Seat_Capacity__c</fullName>
    <formula>Campaign.Total_Seat_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Seat Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>