force-app/main/default/objects/CampaignMember/validationRules/Campaign_member_Allocation_reduction.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_member_Allocation_reduction</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    AND
    (
    ISCHANGED(No_of_guests__c),
    Event_Allocation__r.Seats_Available__c!=0,
    (PRIORVALUE(No_of_guests__c)&lt; No_of_guests__c),
    (Event_Allocation__r.Seats_Available__c &lt; (1+No_of_guests__c - PRIORVALUE(No_of_guests__c)))
    ),
    AND (
        OR(ISNEW(),ISBLANK(PRIORVALUE(No_of_guests__c))),
        Event_Allocation__r.Seats_Available__c!=0, 
        Event_Allocation__r.Seats_Available__c &lt; No_of_guests__c+1
        )
    
)</errorConditionFormula>
    <errorMessage>We don’t have enough seat available, please reduce the number</errorMessage>
</ValidationRule>