force-app/main/default/objects/CampaignMember/validationRules/Cannot_Add_guests_if_no_seats_available.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Add_guests_if_no_seats_available</fullName>
    <active>false</active>
    <errorConditionFormula>AND (Campaign.RecordType.DeveloperName = &quot;Event&quot;, ISPICKVAL(RSVP_Status__c, &apos;Attending&apos;), No_of_guests__c &gt; PRIORVALUE( No_of_guests__c),  Seat_Available__c &lt;=0)</errorConditionFormula>
    <errorMessage>You cannot add guests since there are no seats left on the Event.</errorMessage>
</ValidationRule>