force-app/main/default/objects/CampaignMember/validationRules/Lookup_Event_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Lookup_Event_Only</fullName>
    <active>false</active>
    <errorConditionFormula>Campaign.RecordType.Name &lt;&gt; &quot;Event&quot;</errorConditionFormula>
    <errorDisplayField>CampaignId</errorDisplayField>
    <errorMessage>You can invite an attendee only to an event</errorMessage>
</ValidationRule>