force-app/main/default/objects/CampaignMember/validationRules/Restrict_Use_of_Status_Responded.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Use_of_Status_Responded</fullName>
    <active>true</active>
    <errorConditionFormula>/*
AND(
AND(
ISPICKVAL(Status, &quot;Responded&quot;),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;
),
Campaign.RecordType.DeveloperName = &quot;Event&quot;
)
*/

IF($Permission.Skip_Validations_Permission, 
false,
AND(
AND(
ISPICKVAL(Status, &quot;Responded&quot;),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;
),
Campaign.RecordType.DeveloperName = &quot;Event&quot;
)
)</errorConditionFormula>
    <errorMessage>Responded Status cannot be used for Events.</errorMessage>
</ValidationRule>