force-app/main/default/objects/CampaignMember/validationRules/Seat_Capacity_Cannot_be_Negative_CampMem.validationRule-meta.xml
<ValidationRule>
    <fullName>Seat_Capacity_Cannot_be_Negative_CampMem</fullName>
    <active>false</active>
    <errorConditionFormula>AND (Campaign.Seats_Available__c &lt;=0)</errorConditionFormula>
    <errorMessage>You have exceeded the Seat Capacity, Please choose a lesser value.</errorMessage>
</ValidationRule>