force-app/main/default/objects/CampaignMember/listViews/Events.listView-meta.xml
<ListView>
    <fullName>Events</fullName>
    <columns>MEMBER_TYPE</columns>
    <columns>STATUS</columns>
    <columns>NAME</columns>
    <columns>TITLE</columns>
    <columns>COMPANY</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign_Record_Type__c</field>
        <operation>equals</operation>
        <value>Event</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
    </filters>
    <label>Events</label>
</ListView>